--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,11 @@
-{
-    // Configuration
-    "name": "Codespace for Skills!",
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "GitHub.copilot"
-            ]
-        }
-    }
-}
+ {
+       // Config
+       "name": "Codespace for Skills!",
+       "customizations": {
+           "vscode": {
+               "extensions": [
+                   "GitHub.copilot"
+               ]
+           }
+       }
+   }
